grid image overflow  fixed

--- a/src/cor-da-chita-app/styles/globals.css
+++ b/src/cor-da-chita-app/styles/globals.css
@@ -3,10 +3,6 @@
 @tailwind components;
 @tailwind utilities;
 
-.grid-box {
-  height: 400px;
-}
-
 /* header.px-6 {
   padding-left: 0;
   padding-right: 0;
